/**
 * @Title: ActionType.java
 * @Package: com.Wechat.DataType
 * @author: JwZheng
 * @date: 2020年11月10日 下午10:09:40
 * @Description: 
 */

package com.WeChat.DataType;

/**
 * @ClassName: ActionType
 * @author JwZheng
 * @date: 2020年11月10日 下午10:09:40
 * @Description: 
 */
public enum RequestType {
	 CHAT,LOGOUT,LOGIN,GET_USERS
}
